update plant view

--- a/Prevu.Synoptics.P1023_ALZATE/PlantView.xaml
+++ b/Prevu.Synoptics.P1023_ALZATE/PlantView.xaml
@@ -10,24 +10,22 @@
              d:Height="840" d:Width="1700" d:Background="{DynamicResource MaterialDesignPaper}">
 
 
-  <Grid Width="1700" Height="840" VerticalAlignment="Top" HorizontalAlignment="Left">
-    <Machines:QX_HMI_ElectricalCabinet HorizontalAlignment="Left" Margin="455,140,0,0" VerticalAlignment="Top" Height="116" Width="395"/>
-    <Labels:DeviceLabel x:Name="Q11" HorizontalAlignment="Left" Margin="615,55,0,0" VerticalAlignment="Top" ComponentName="Q11"/>
-    <Labels:DeviceLabel x:Name="S110" HorizontalAlignment="Left" Margin="615,291,0,0" VerticalAlignment="Top" ComponentName="S110"/>
-    <Machines:QX_ElectricalCabinet HorizontalAlignment="Left" Margin="900,140,0,0" VerticalAlignment="Top" Height="116" Width="400"/>
-    <Labels:DeviceLabel x:Name="Q21" HorizontalAlignment="Left" Margin="1055,55,0,0" VerticalAlignment="Top" ComponentName="Q21"/>
-    <Labels:DeviceLabel x:Name="S210" HorizontalAlignment="Left" Margin="1055,291,0,0" VerticalAlignment="Top" ComponentName="S210"/>
-    <Machines:QX_HMI HorizontalAlignment="Left" Margin="1340,140,0,0" VerticalAlignment="Top" Height="116" Width="400"/>
-    <Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1495,55,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
-    <Labels:DeviceLabel x:Name="Q21_Copy" HorizontalAlignment="Left" Margin="175,55,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
-    <Labels:GroupLabel HorizontalAlignment="Left" Margin="628,370,0,0" VerticalAlignment="Top" GroupName="230"/>
-    <Labels:GroupLabel HorizontalAlignment="Left" Margin="628,460,0,0" VerticalAlignment="Top" GroupName="330"/>
-    <Labels:GroupLabel HorizontalAlignment="Left" Margin="1068,370,0,0" VerticalAlignment="Top" GroupName="430"/>
-    <Rectangle HorizontalAlignment="Left" Height="1913" Margin="420,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-    <Rectangle HorizontalAlignment="Left" Height="1913" Margin="884,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-    <Rectangle HorizontalAlignment="Left" Height="1913" Margin="1348,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-    <Rectangle HorizontalAlignment="Left" Height="1913" Margin="1748,37,0,0" Stroke="Black" VerticalAlignment="Top" Width="1"/>
-    <Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="96,140,0,0" VerticalAlignment="Top" Width="248" Height="116"/>
+	<Grid Width="1700" Height="840" VerticalAlignment="Top" HorizontalAlignment="Left">
+		<Machines:QX_HMI_ElectricalCabinet HorizontalAlignment="Left" Margin="637,284,0,0" VerticalAlignment="Top" Height="116" Width="180"/>
+		<Labels:DeviceLabel x:Name="Q11" HorizontalAlignment="Left" Margin="682,199,0,0" VerticalAlignment="Top" ComponentName="Q11"/>
+		<Labels:DeviceLabel x:Name="S110" HorizontalAlignment="Left" Margin="682,435,0,0" VerticalAlignment="Top" ComponentName="S110"/>
+		<Machines:QX_ElectricalCabinet HorizontalAlignment="Left" Margin="862,284,0,0" VerticalAlignment="Top" Height="116" Width="184"/>
+		<Labels:DeviceLabel x:Name="Q21" HorizontalAlignment="Left" Margin="909,199,0,0" VerticalAlignment="Top" ComponentName="Q21"/>
+		<Labels:DeviceLabel x:Name="S210" HorizontalAlignment="Left" Margin="909,435,0,0" VerticalAlignment="Top" ComponentName="S210"/>
+		<Machines:QX_HMI HorizontalAlignment="Left" Margin="1097,284,0,0" VerticalAlignment="Top" Height="116" Width="110"/>
+		<Labels:DeviceLabel x:Name="HMI_01" HorizontalAlignment="Left" Margin="1107,199,0,0" VerticalAlignment="Top" ComponentName="HMI-01"/>
+		<Labels:DeviceLabel x:Name="Q21_Copy" HorizontalAlignment="Left" Margin="492,199,0,0" VerticalAlignment="Top" ComponentName="Q01"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="695,514,0,0" VerticalAlignment="Top" GroupName="230"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="695,604,0,0" VerticalAlignment="Top" GroupName="330"/>
+		<Labels:GroupLabel HorizontalAlignment="Left" Margin="922,514,0,0" VerticalAlignment="Top" GroupName="430"/>
+		<Machines:QX_ShortElectricalCabinet HorizontalAlignment="Left" Margin="485,284,0,0" VerticalAlignment="Top" Width="104" Height="116"/>
+		<Rectangle HorizontalAlignment="Center" Height="644" Stroke="Black" VerticalAlignment="Center" Width="1030" StrokeThickness="2" StrokeDashArray="4 4" ClipToBounds="True" StrokeDashCap="Round" StrokeEndLineCap="Round" StrokeLineJoin="Round" StrokeStartLineCap="Round" d:IsLocked="True"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="240,98,0,0" VerticalAlignment="Top" ComponentName="ESTOP-AREA-01"/>
 
-  </Grid>
+	</Grid>
 </UserControl>
