--- a/Prevu.Synoptics.V2451_Biffa/WH1.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH1.xaml
@@ -8,7 +8,7 @@
              x:Class="Prevu.Synoptics.WH1" mc:Ignorable="d" 
              Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
     <Grid Margin="-4,5,4,-5">
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1239,757,0,0" VerticalAlignment="Top" Color="Water" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1239,749,0,0" VerticalAlignment="Top" Color="Water" Width="32" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -49,7 +49,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="848,493,0,0" VerticalAlignment="Top" Color="Water" Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="848,484,0,0" VerticalAlignment="Top" Color="Water" Width="58" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -61,7 +61,7 @@
         </Labels:Pipe>
         <Machines:VB_VibratingScreen HorizontalAlignment="Left" Margin="825,493,0,0" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="666,735,0,0" VerticalAlignment="Top" Width="196" Color="Water" StatusComponent="450-02-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="546,610,0,0" VerticalAlignment="Top" Color="Water" Width="174" RenderTransformOrigin="0.5,0.5" StatusComponent="470-02-MA1" VisibilityComponent="470-23-CV2">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="539,589,0,0" VerticalAlignment="Top" Color="Water" Width="188" RenderTransformOrigin="0.5,0.5" StatusComponent="470-02-MA1" VisibilityComponent="470-23-CV2" Height="5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -85,7 +85,7 @@
         <Labels:Pipe HorizontalAlignment="Left" Margin="710,345,0,0" VerticalAlignment="Top" Width="250" StatusComponent="455-01-MA1" PipeHeight="Medium"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="144,151,0,0" VerticalAlignment="Top" Width="164" Color="Water" StatusComponent="450-01-MA1"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="240,199,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV2"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="457,531,0,0" VerticalAlignment="Top" Width="426" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="450-01-MA1">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="458,531,0,0" VerticalAlignment="Top" Width="426" Color="Water" RenderTransformOrigin="0.5,0.5" StatusComponent="450-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -162,7 +162,7 @@
             </Machines:DCE_DryingCentrifuge.RenderTransform>
         </Machines:DCE_DryingCentrifuge>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-                      Margin="56,93,0,0" 
+                      Margin="56,83,0,0" 
                       VerticalAlignment="Top" 
                       JumpFromLabel="420-01-MA1" 
                       JumpToLabel="322-01-MA1"/>
@@ -179,7 +179,7 @@
             VerticalAlignment="Top" 
             ComponentName="450-21-CV1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="624,701,0,0" 
+            Margin="625,697,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-41-LT1" RenderTransformOrigin="0.5,0.5">
             <Labels:DeviceLabel.RenderTransform>
@@ -199,15 +199,15 @@
             Margin="308,653,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="543,525,0,0" VerticalAlignment="Top" Color="Water" Width="92" StatusComponent="470-02-MA1" VisibilityComponent="470-23-CV2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="543,495,0,0" VerticalAlignment="Top" Color="Water" Width="92" StatusComponent="470-02-MA1" VisibilityComponent="470-23-CV2"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="498,501,0,0" 
+            Margin="498,463,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="450-41-LT1" 
             JumpToLabel="470-23-CV2" RenderTransformOrigin="-0.711,0.53"/>
         <Labels:Pipe HorizontalAlignment="Left" Margin="1014,347,0,0" VerticalAlignment="Top" Width="82" StatusComponent="456-01-MA1" PipeHeight="Medium"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
-            Margin="1080,326,0,0" 
+            Margin="1080,318,0,0" 
             VerticalAlignment="Top" 
             JumpFromLabel="456-01-MA1" 
             JumpToLabel="460-01-MA1"/>
@@ -230,20 +230,20 @@
             Margin="830,565,0,0" 
             VerticalAlignment="Top" 
             ComponentName="440-01-MA1"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1148,743,0,0" VerticalAlignment="Top" Width="109" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1148,735,0,0" VerticalAlignment="Top" Width="109" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1080,663,0,0" 
+            Margin="1080,655,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-23-CV2"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1080,565,0,0" 
+            Margin="1080,557,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-23-CV3"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1002,727,0,0" VerticalAlignment="Top" Width="44" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="1002,743,0,0" VerticalAlignment="Top" Width="108" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2"/>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1092,717,0,0" VerticalAlignment="Top" Height="60" Width="66"/>
-        <Rectangle HorizontalAlignment="Left" Height="46" Margin="1000,715,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="986,671,0,0" VerticalAlignment="Top" Color="Water" Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1002,719,0,0" VerticalAlignment="Top" Width="44" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="1002,735,0,0" VerticalAlignment="Top" Width="108" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV2"/>
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1092,709,0,0" VerticalAlignment="Top" Height="60" Width="66"/>
+        <Rectangle HorizontalAlignment="Left" Height="46" Margin="1000,707,0,0" Stroke="Black" VerticalAlignment="Top" Width="6" Fill="#FFBDBDBD"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="986,663,0,0" VerticalAlignment="Top" Color="Water" Width="116" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -253,8 +253,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="875,465,0,0" VerticalAlignment="Top" Width="170" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3"/>
-        <Labels:Pipe HorizontalAlignment="Left" Margin="988,518,0,0" VerticalAlignment="Top" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
+        <Labels:Pipe HorizontalAlignment="Left" Margin="875,457,0,0" VerticalAlignment="Top" Width="170" Color="Water" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3"/>
+        <Labels:Pipe HorizontalAlignment="Left" Margin="988,510,0,0" VerticalAlignment="Top" Color="Water" Width="110" RenderTransformOrigin="0.5,0.5" StatusComponent="450-02-MA1" VisibilityComponent="450-23-CV3">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -264,7 +264,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1010,559,0,0" VerticalAlignment="Top" Height="60" Width="68" RenderTransformOrigin="0.5,0.5">
+        <Machines:CV_Valve HorizontalAlignment="Left" Margin="1010,551,0,0" VerticalAlignment="Top" Height="60" Width="68" RenderTransformOrigin="0.5,0.5">
             <Machines:CV_Valve.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -318,8 +318,8 @@
             Margin="182,377,0,0" 
             VerticalAlignment="Top" 
             ComponentName="420-23-CV1"/>
-        <Rectangle HorizontalAlignment="Left" Height="2" Margin="1232,775,0,0" Stroke="Black" VerticalAlignment="Top" Width="75"/>
-        <Machines:External HorizontalAlignment="Left" Margin="1301,746,0,0" VerticalAlignment="Top" Height="61" Width="57" RenderTransformOrigin="0.5,0.5">
+        <Rectangle HorizontalAlignment="Left" Height="2" Margin="1232,767,0,0" Stroke="Black" VerticalAlignment="Top" Width="75"/>
+        <Machines:External HorizontalAlignment="Left" Margin="1301,738,0,0" VerticalAlignment="Top" Height="61" Width="57" RenderTransformOrigin="0.5,0.5">
             <Machines:External.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -330,7 +330,7 @@
             </Machines:External.RenderTransform>
         </Machines:External>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="1275,705,0,0" 
+            Margin="1275,697,0,0" 
             VerticalAlignment="Top" 
             ComponentName="450-71-PC1"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
