--- a/Prevu.Drawings/Machines/BBF_BigBagFilling.xaml
+++ b/Prevu.Drawings/Machines/BBF_BigBagFilling.xaml
@@ -8,9 +8,9 @@
   
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg18" Width="100" Height="100">
-      <Rectangle  Canvas.Left="37" Canvas.Top="7" Width="3" Height="8" Name="rect4" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-      <Rectangle  Canvas.Left="60" Canvas.Top="7" Width="3" Height="8" Name="rect6" Fill="#FF757575" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-      <Rectangle  Canvas.Left="30" Canvas.Top="15" Width="40" Height="69" RadiusX="7" RadiusY="7" Name="rect2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth2}"/>
+			<Rectangle  Canvas.Left="37" Canvas.Top="7" Width="3" Height="8" Name="rect4" Fill="#FF292929" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+			<Rectangle  Canvas.Left="60" Canvas.Top="7" Width="3" Height="8" Name="rect6" Fill="#FF292929" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+      <Rectangle  Canvas.Left="30" Canvas.Top="15" Width="40" Height="69" RadiusX="7" RadiusY="7" Name="rect2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth2}"/>
       <Grid Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path  Name="path8" Fill="#FF607D8B" >
           <Path.Data>
