--- a/Prevu.Drawings/Machines/Buffer_belt.xaml
+++ b/Prevu.Drawings/Machines/Buffer_belt.xaml
@@ -6,28 +6,15 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              Height="100" Width="100">
-    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
-        <Canvas Name="svg877" Width="100" Height="100">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path871" Fill="#FFC4C4C4" Stroke="#FF979797">
-                <Path.Data>
-                    <PathGeometry Figures="M54.6306 76H5.5C4.67157 76 4 75.3284 4 74.5V67.5C4 66.6716 4.67157 66 5.5 66H50.3601C50.5917 66 50.8201 65.9464 51.0275 65.8433L93.8326 44.5768C94.8297 44.0814 96 44.8068 96 45.9202V53.5929C96 54.1506 95.6906 54.6623 95.1966 54.9213L55.3272 75.8284C55.1123 75.9411 54.8732 76 54.6306 76Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path873" Fill="#FFC4C4C4" Stroke="#FF979797">
-                <Path.Data>
-                    <PathGeometry Figures="M10.5 71C10.5 73.7891 8.18227 76 6 76C3.81773 76 1.5 73.7891 1.5 71C1.5 68.2109 3.81773 66 6 66C8.18227 66 10.5 68.2109 10.5 71Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path875" Fill="#FFC4C4C4" Stroke="#FF979797">
-                <Path.Data>
-                    <PathGeometry Figures="M99.5 49.5C99.5 52.2891 97.1823 54.5 95 54.5C92.8177 54.5 90.5 52.2891 90.5 49.5C90.5 46.7109 92.8177 44.5 95 44.5C97.1823 44.5 99.5 46.7109 99.5 49.5Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-        </Canvas>
-    </Viewbox>
+	<Viewbox Stretch="Uniform">
+		<Canvas Name="svg8" Width="100" Height="35">
+			<Path Fill="Gray">
+				<Path.Data>
+					<PathGeometry Figures="M95.0814 3.64447L96.5546 7.82352L97 11L56.5256 32.2008C55.5234 32.7258 54.4089 33 53.2775 33H6L5 32.5V23.5L5.99419 23H49.0649C50.1482 23 51.2168 22.7485 52.1865 22.2654L91.9979 2.43048L95.0814 3.64447Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Ellipse Canvas.Left="1" Canvas.Top="23" Width="10" Height="10" Fill="#FF4C4C4C"/>
+			<Ellipse Canvas.Left="89" Canvas.Top="2" Width="10" Height="10" Fill="#FF4C4C4C"/>
+		</Canvas>
+	</Viewbox>
 </UserControl>
