--- a/Prevu.Drawings/Machines/CV_Valve.xaml
+++ b/Prevu.Drawings/Machines/CV_Valve.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" Width="100" Height="100">
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg4" Width="100" Height="100">
-      <Path  Name="path2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+			<Path  Name="path2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M2 72.865C2 75.2747 4.62872 76.7808 6.7317 75.5759L50.5 50.5L94.2683 75.5759C96.3713 76.7808 99 75.2747 99 72.865V28.135C99 25.7253 96.3713 24.2192 94.2683 25.424L50.5 50.5L6.73171 25.4241C4.62873 24.2192 2 25.7253 2 28.135V72.865Z" FillRule="NonZero"/>
         </Path.Data>
