--- a/Prevu.Drawings/Machines/DCE_DryingCentrifuge.xaml
+++ b/Prevu.Drawings/Machines/DCE_DryingCentrifuge.xaml
@@ -8,13 +8,13 @@
 
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg38" Width="100" Height="100">
-      <Path  Name="path2" Fill="#FF9E9E9E" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+			<Path  Name="path2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M72 7C72 5.89543 72.8954 5 74 5H74.5L90.2271 6.79738C91.2372 6.91283 92 7.76774 92 8.78445V18C92 19.1046 91.1046 20 90 20H74C72.8954 20 72 19.1046 72 18V7Z" FillRule="NonZero"/>
         </Path.Data>
       </Path>
       <Rectangle  Canvas.Left="23" Canvas.Top="5" Width="54" Height="90" 
-                  RadiusX="3" RadiusY="3" Name="rect4" Fill="#FFBDBDBD" 
+                  RadiusX="3" RadiusY="3" Name="rect4" Fill="Gray" 
                   Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
 
 
@@ -108,7 +108,7 @@
         </Rectangle>
       </Canvas>
 
-      <Border Width="54" Height="90" BorderThickness="2" BorderBrush="#FFBDBDBD"
+      <Border Width="54" Height="90" BorderThickness="2" BorderBrush="#FFAAAAAA"
               Canvas.Left="23" Canvas.Top="5" CornerRadius="3" Effect="{DynamicResource MaterialDesignShadowDepth1}">
 
       </Border>
