--- a/Prevu.Drawings/Machines/DV_Diverter_Y.xaml
+++ b/Prevu.Drawings/Machines/DV_Diverter_Y.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" Width="100" Height="100">
   <Viewbox  Stretch="Uniform">
     <Canvas Name="svg4" Width="100" Height="100">
-      <Path  Name="path2" Fill="#FFBDBDBD" Effect="{StaticResource MaterialDesignShadowDepth1}">
+			<Path  Name="path2" Fill="Gray" Effect="{StaticResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M75.6482 51.129C75.4268 51.129 75.2117 51.0556 75.0366 50.9202L40.4875 24.2089C40.3123 24.0735 40.0972 24 39.8758 24L4.93638 24C3.98192 24 3.56998 25.2096 4.32606 25.7922L34.8851 49.3369C35.6412 49.9194 35.2292 51.129 34.2748 51.129H3C2.44772 51.129 2 51.5767 2 52.129V74C2 74.5523 2.44771 75 3 75H96C96.5523 75 97 74.5523 97 74V52.129C97 51.5767 96.5523 51.129 96 51.129H75.6482Z" FillRule="NonZero"/>
         </Path.Data>
