--- a/Prevu.Drawings/Machines/EXC_HeatExchanger.xaml
+++ b/Prevu.Drawings/Machines/EXC_HeatExchanger.xaml
@@ -8,8 +8,8 @@
   <Viewbox Stretch="Uniform">
     <Canvas Name="svg6" Width="100" Height="100">
       <Ellipse Canvas.Left="0" Canvas.Top="0" Width="100" Height="100" 
-               Name="circle2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
-      <Path Name="path4" Fill="#FF616161" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+               Name="circle2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+			<Path Name="path4" Fill="#FF292929" Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M15.2879 85.9872L15.2879 16.7758C15.2879 11.7428 21.4881 9.3535 24.8656 13.0849L50 40.8529L75.1344 13.0849C78.5119 9.3535 84.7121 11.7428 84.7121 16.7758V85.9872C81.9906 88.6128 78.9722 90.9325 75.7121 92.8911V25.8581L54.0776 49.7593C51.8943 52.1715 48.1057 52.1714 45.9224 49.7593L24.2879 25.8581V92.8911C21.0278 90.9325 18.0094 88.6128 15.2879 85.9872Z" FillRule="NonZero"/>
         </Path.Data>
