--- a/Prevu.Drawings/Machines/External.xaml
+++ b/Prevu.Drawings/Machines/External.xaml
@@ -16,12 +16,12 @@
         <RectangleGeometry x:Key="clip0_105:5" Rect="0, 0, 100, 100"/>
       </Canvas.Resources>
       <Canvas Name="g6" >
-        <Path Name="path2" Fill="#FF424242" >
+				<Path Name="path2" Fill="#FF292929" >
           <Path.Data>
             <PathGeometry Figures="M24 50L50 100V0L24 50Z" FillRule="NonZero"/>
           </Path.Data>
         </Path>
-        <Path Name="path4" Fill="#FFBDBDBD">
+				<Path Name="path4" Fill="Gray">
           <Path.Data>
             <PathGeometry Figures="M76 50L50 -2.27299e-06L50 100L76 50Z" FillRule="NonZero"/>
           </Path.Data>
