--- a/Prevu.Drawings/Machines/MaterialInletOutlet.xaml
+++ b/Prevu.Drawings/Machines/MaterialInletOutlet.xaml
@@ -9,7 +9,7 @@
 
   <Viewbox Stretch="Uniform">
     <Canvas Name="svg4" Width="100" Height="100">
-      <Path Name="path2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+			<Path Name="path2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M46 83H29C28.4477 83 28 82.5523 28 82V18C28 17.4477 28.4477 17 29 17H46C46.5523 17 47 16.5523 47 16V10.8435C47 9.81269 48.3708 9.45604 48.8732 10.3561L70.728 49.5126C70.8971 49.8156 70.897 50.1845 70.728 50.4874L48.8732 89.6439C48.3708 90.544 47 90.1873 47 89.1565V84C47 83.4477 46.5523 83 46 83Z" FillRule="NonZero"/>
         </Path.Data>
