--- a/Prevu.Drawings/Machines/SCW_ScrewConveyor_straight.xaml
+++ b/Prevu.Drawings/Machines/SCW_ScrewConveyor_straight.xaml
@@ -15,9 +15,9 @@
       ViewboxUnits="Absolute">
       <VisualBrush.Visual>
         <Canvas>
-          <Rectangle Fill="#FFBDBDBD" Width="24" Height="16" />
-          <Path Stroke="#FF424242" Data="M 0 16 L 8 0"  StrokeThickness="2" />
-          <Path Stroke="#FF424242" Data="M 8 -1 L 16 16" StrokeThickness="2"/>
+          <Rectangle Fill="Gray" Width="24" Height="16" />
+					<Path Stroke="#FF292929" Data="M 0 16 L 8 0"  StrokeThickness="2" />
+					<Path Stroke="#FF292929" Data="M 8 -1 L 16 16" StrokeThickness="2"/>
         </Canvas>
       </VisualBrush.Visual>
     </VisualBrush>
@@ -25,7 +25,7 @@
 
   <Grid>
     <Rectangle Width="auto" Height="16" Fill="{StaticResource ScrewBrush}" RadiusX="1" RadiusY="1" />
-    <Border BorderThickness="0 2 0 2" BorderBrush="#FFBDBDBD" CornerRadius="2" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+		<Border BorderThickness="0 2 0 2" BorderBrush="Gray" CornerRadius="2" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
 
   </Grid>
 
