--- a/Prevu.Drawings/Machines/Storage_silo.xaml
+++ b/Prevu.Drawings/Machines/Storage_silo.xaml
@@ -6,33 +6,19 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
-        <Canvas Name="svg2042" Width="49" Height="76">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path2034" Fill="#FFD3D3D3">
-                <Path.Data>
-                    <PathGeometry Figures="M1 1H48V33.5L31 57.5V66.25V75H18V66.25V57.5L1 33.5V1Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Rectangle xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Left="21" Canvas.Top="65" Width="63" Height="7" RadiusX="3.5" RadiusY="3.5" Name="rect2036" Fill="#FFBABABA">
-                <Rectangle.RenderTransform>
-                    <RotateTransform Angle="-90" CenterX="0"/>
-                </Rectangle.RenderTransform>
-            </Rectangle>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path2038" Fill="#FF607D8B">
-                <Path.Data>
-                    <PathGeometry Figures="M18 66H22.0539H23.4766H25.8478H31V75H18V66Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path2040" Stroke="#FF939393">
-                <Path.Data>
-                    <PathGeometry Figures="M25.7826 64L23.3043 61.0741L25.7826 58.1482L23.3043 55.2223L25.7826 52.2964L23.3043 49.3704L25.7826 46.4445L23.3043 43.5186L25.7826 40.5927L23.3043 37.6668L25.7826 34.7409L23.3043 31.815L25.7826 28.8891L23.3043 25.9632L25.7826 23.0373L23.3043 20.1113L25.7826 17.1854L23.3043 14.2595L25.7826 11.3336L23.3043 8.4077L25.7826 5.48179L23.3043 3" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-        </Canvas>
-    </Viewbox>
+	<Viewbox Stretch="Uniform">
+		<Canvas Name="svg8" Width="73" Height="100">
+			<Path Name="path2" Fill="#FF808080">
+				<Path.Data>
+					<PathGeometry Figures="M26.6558 83.0162L4.34425 51.1062C3.46926 49.8548 3 48.3647 3 46.8378V10.449C3 6.33502 6.33502 3 10.449 3H62.551C66.665 3 70 6.33502 70 10.449V46.7617C70 48.3358 69.5013 49.8694 68.5756 51.1425L45.4244 82.9799C44.4987 84.253 44 85.7867 44 87.3608V93C44 95.2091 42.2091 97 40 97H32C29.7909 97 28 95.2091 28 93V87.2847C28 85.7577 27.5307 84.2676 26.6558 83.0162Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Rectangle Canvas.Left="30" Canvas.Top="5" Width="12" Height="84" RadiusX="6" RadiusY="6" Name="rect4" Fill="#FF909090"/>
+			<Path Name="path6" StrokeThickness="1.4898" Stroke="#FF292929">
+				<Path.Data>
+					<PathGeometry Figures="M38 85L34 81.3546L38 77.7092L34 74.0638L38 70.4184L34 66.773L38 63.1276L34 59.4822L38 55.8368L34 52.1914L38 48.546L34 44.9006L38 41.2552L34 37.6098L38 33.9645L34 30.3191L38 26.6737L34 23.0283L38 19.3829L34 15.7375L38 12.0921L34 9" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+		</Canvas>
+	</Viewbox>
 </UserControl>
