--- a/Prevu.Drawings/Machines/VB_VibratingScreen.xaml
+++ b/Prevu.Drawings/Machines/VB_VibratingScreen.xaml
@@ -30,7 +30,7 @@
       <Rectangle  Canvas.Left="21" Canvas.Top="50" Width="57" Height="40" RadiusX="2" RadiusY="2" 
                   Name="rect10" Fill="#FF607D8B" Effect="{DynamicResource MaterialDesignShadowDepth2}"/>
       <Grid Effect="{DynamicResource MaterialDesignShadowDepth2}">
-        <Path  Name="path12" Fill="#FFBDBDBD" >
+        <Path  Name="path12" Fill="Gray" >
           <Path.Data>
             <PathGeometry Figures="M12 29H87V40C87 41.1046 86.1046 42 85 42H14C12.8954 42 12 41.1046 12 40V29Z" FillRule="NonZero"/>
           </Path.Data>
