--- a/Prevu.Drawings/Machines/Radar.xaml
+++ b/Prevu.Drawings/Machines/Radar.xaml
@@ -6,48 +6,28 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              Height="100" Width="100">
-    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
-        <Canvas Name="svg1181" Width="26" Height="37">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources/>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1167" Fill="#FFBDBDBD">
-                <Path.Data>
-                    <PathGeometry Figures="M8 1H18L24.5 26H1.5L8 1Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1169" Stroke="#FF9F9F9F">
-                <Path.Data>
-                    <PathGeometry Figures="M10 1H18L25 26" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1171" Stroke="#FF9F9F9F">
-                <Path.Data>
-                    <PathGeometry Figures="M16 1H10.5625H8L1 26" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1173" Stroke="#FF9F9F9F" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
-                <Path.Data>
-                    <PathGeometry Figures="M1 26L25 26" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1175" Fill="#000000">
-                <Path.Data>
-                    <PathGeometry Figures="M16 28C16 28.5304 15.6839 29.0391 15.1213 29.4142C14.5587 29.7893 13.7956 30 13 30C12.2044 30 11.4413 29.7893 10.8787 29.4142C10.3161 29.0391 10 28.5304 10 28L10.6082 28C10.6082 28.4229 10.8602 28.8285 11.3087 29.1275C11.7573 29.4265 12.3657 29.5945 13 29.5945C13.6343 29.5945 14.2427 29.4265 14.6913 29.1275C15.1398 28.8285 15.3918 28.4229 15.3918 28H16Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1177" Fill="#000000">
-                <Path.Data>
-                    <PathGeometry Figures="M19 28C19 29.3261 18.3679 30.5979 17.2426 31.5355C16.1174 32.4732 14.5913 33 13 33C11.4087 33 9.88258 32.4732 8.75736 31.5355C7.63214 30.5979 7 29.3261 7 28L7.63447 28C7.63447 29.1859 8.19977 30.3231 9.206 31.1617C10.2122 32.0002 11.577 32.4713 13 32.4713C14.423 32.4713 15.7878 32.0002 16.794 31.1617C17.8002 30.3231 18.3655 29.1859 18.3655 28H19Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-            <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path1179" Fill="#000000">
-                <Path.Data>
-                    <PathGeometry Figures="M22 28C22 30.1217 21.0518 32.1566 19.364 33.6569C17.6761 35.1571 15.3869 36 13 36C10.6131 36 8.32387 35.1571 6.63604 33.6569C4.94821 32.1566 4 30.1217 4 28L4.68789 28C4.68789 29.9596 5.56363 31.8389 7.12245 33.2245C8.68128 34.6101 10.7955 35.3885 13 35.3885C15.2045 35.3885 17.3187 34.6101 18.8775 33.2245C20.4364 31.8389 21.3121 29.9596 21.3121 28H22Z" FillRule="NonZero"/>
-                </Path.Data>
-            </Path>
-        </Canvas>
-    </Viewbox>
+	<Viewbox Stretch="Uniform">
+		<Canvas Name="svg10" Width="70" Height="100">
+			<Path Fill="#FF808080">
+				<Path.Data>
+					<PathGeometry Figures="M20.4579 5.9689C20.925 4.21811 22.5107 3 24.3227 3H45.6772C47.4893 3 49.0749 4.21811 49.542 5.9689L65.2827 64.9689C65.9602 67.5084 64.0462 70 61.4179 70H8.58207C5.95375 70 4.03974 67.5084 4.71725 64.9689L20.4579 5.9689Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Fill="#FF292929">
+				<Path.Data>
+					<PathGeometry Figures="M29.5 73C29.2239 73 28.9978 73.2246 29.0205 73.4998C29.2745 76.5797 31.8546 79 35 79C38.1454 79 40.7255 76.5797 40.9795 73.4998C41.0022 73.2246 40.7761 73 40.5 73V73C40.2239 73 40.0026 73.2245 39.9754 73.4993C39.7248 76.0263 37.5929 78 35 78C32.4071 78 30.2752 76.0263 30.0246 73.4993C29.9974 73.2245 29.7761 73 29.5 73V73Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Fill="#FF292929">
+				<Path.Data>
+					<PathGeometry Figures="M22.1667 73C21.5223 73 20.9949 73.5242 21.0479 74.1663C21.6406 81.3526 27.6608 87 35 87C42.3392 87 48.3594 81.3526 48.9521 74.1663C49.0051 73.5242 48.4777 73 47.8333 73V73C47.189 73 46.6728 73.5238 46.6092 74.165C46.0246 80.0614 41.0501 84.6667 35 84.6667C28.9499 84.6667 23.9754 80.0614 23.3908 74.165C23.3272 73.5238 22.811 73 22.1667 73V73Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+			<Path Fill="#FF292929">
+				<Path.Data>
+					<PathGeometry Figures="M13.9167 73C12.8581 73 11.9917 73.8611 12.0787 74.9161C13.0524 86.7221 22.9427 96 35 96C47.0573 96 56.9476 86.7221 57.9213 74.9161C58.0083 73.8611 57.1419 73 56.0833 73V73C55.0248 73 54.1767 73.8606 54.0723 74.914C53.1119 84.6008 44.9395 92.1667 35 92.1667C25.0605 92.1667 16.8881 84.6008 15.9277 74.914C15.8233 73.8606 14.9752 73 13.9167 73V73Z" FillRule="NonZero"/>
+				</Path.Data>
+			</Path>
+		</Canvas>
+	</Viewbox>
 </UserControl>
