--- a/Prevu.Drawings/Machines/STR_Washing_reactor_B.xaml
+++ b/Prevu.Drawings/Machines/STR_Washing_reactor_B.xaml
@@ -6,58 +6,58 @@
              xmlns:local="clr-namespace:Prevu.Drawings.Machines"
              mc:Ignorable="d" 
              Height="100" Width="100">
-    <Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
-        <Canvas Name="svg1056" Width="43" Height="85">
-            <Canvas.RenderTransform>
-                <TranslateTransform X="0" Y="0"/>
-            </Canvas.RenderTransform>
-            <Canvas.Resources>
-                <RectangleGeometry xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Key="clip0_527_100" Rect="0, 0, 43, 85"/>
-            </Canvas.Resources>
-            <!--Unknown tag: sodipodi:namedview-->
-            <Canvas Name="g998" Clip="{StaticResource clip0_527_100}">
-                <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path978" Fill="#FF9F9F9F">
-                    <Path.Data>
-                        <PathGeometry Figures="M5 12L13 10H21H29.5L38 12V83H5V12Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Canvas Name="g982" Effect="{StaticResource MaterialDesignShadowDepth1}">
-                    <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path980" StrokeThickness="2" Stroke="#FFBDBDBD" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
-                        <Path.Data>
-                            <PathGeometry Figures="M36 84H7C5.34315 84 4 82.675 4 81.0405V27.5C4 26.6716 3.32843 26 2.5 26H2V26C1.44772 26 1 25.5523 1 25V20C1 19.4477 1.44772 19 2 19V19H2.5C3.32843 19 4 18.3284 4 17.5V13.9595C4 12.325 5.34315 11 7 11H16" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Canvas Name="g986" Effect="{StaticResource MaterialDesignShadowDepth1}">
-                    <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path984" StrokeThickness="2" Stroke="#FFBDBDBD" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
-                        <Path.Data>
-                            <PathGeometry Figures="M36 84C37.6569 84 39 82.675 39 81.0405V27.5C39 26.6716 39.6716 26 40.5 26H41V26C41.5523 26 42 25.5523 42 25V20C42 19.4477 41.5523 19 41 19V19H40.5C39.6716 19 39 18.3284 39 17.5V13.9595C39 12.325 37.6569 11 36 11H27" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Canvas Name="g990" Effect="{StaticResource MaterialDesignShadowDepth1}">
-                    <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path988" Fill="#FF636363">
-                        <Path.Data>
-                            <PathGeometry Figures="M20 1C20 0.447715 20.4477 0 21 0C21.5523 0 22 0.447715 22 1V21.8534C22 22.2151 21.8047 22.5486 21.4893 22.7255C21.1854 22.896 20.8146 22.896 20.5107 22.7255C20.1953 22.5486 20 22.2151 20 21.8534L20 1Z" FillRule="NonZero"/>
-                        </Path.Data>
-                    </Path>
-                </Canvas>
-                <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path992" Fill="#FF636363">
-                    <Path.Data>
-                        <PathGeometry Figures="M14.6492 17.7569C13.185 16.7859 11.2112 17.1832 10.2367 18.6449C10.0796 18.8806 9.95462 19.1361 9.86506 19.4048L9.63246 20.1026C9.22192 21.3342 9.22192 22.6658 9.63246 23.8974L9.86502 24.5951C9.95461 24.8638 10.0796 25.1194 10.2368 25.3552C11.2113 26.817 13.1851 27.2146 14.6496 26.2439L17.6853 24.232C19.6945 22.9004 22.3055 22.9004 24.3147 24.232L27.3504 26.2439C28.8149 27.2146 30.7887 26.817 31.7632 25.3552C31.9204 25.1194 32.0454 24.8638 32.135 24.5951L32.3675 23.8974C32.7781 22.6658 32.7781 21.3342 32.3675 20.1026L32.1349 19.4048C32.0454 19.1361 31.9204 18.8806 31.7633 18.6449C30.7888 17.1832 28.815 16.7859 27.3508 17.7569L24.3162 19.7695C22.3063 21.1024 19.6937 21.1024 17.6838 19.7695L14.6492 17.7569Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path994" Fill="#FFBDBDBD" Stroke="#FFBDBDBD">
-                    <Path.Data>
-                        <PathGeometry Figures="M0.5 24.2397V21.2603L4.5 18.4603V27.0397L0.5 24.2397Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-                <Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path996" Fill="#FFBDBDBD" Stroke="#FFBDBDBD">
-                    <Path.Data>
-                        <PathGeometry Figures="M42.5 23.7397V20.7603L38.5 17.9603V26.5397L42.5 23.7397Z" FillRule="NonZero"/>
-                    </Path.Data>
-                </Path>
-            </Canvas>
-        </Canvas>
-    </Viewbox>
+	<Viewbox xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" Stretch="Uniform">
+		<Canvas Name="svg1056" Width="43" Height="85">
+			<Canvas.RenderTransform>
+				<TranslateTransform X="0" Y="0"/>
+			</Canvas.RenderTransform>
+			<Canvas.Resources>
+				<RectangleGeometry xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" x:Key="clip0_527_100" Rect="0, 0, 43, 85"/>
+			</Canvas.Resources>
+			<!--Unknown tag: sodipodi:namedview-->
+			<Canvas Name="g998" Clip="{StaticResource clip0_527_100}">
+				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path978" Fill="Gray">
+					<Path.Data>
+						<PathGeometry Figures="M5 12L13 10H21H29.5L38 12V83H5V12Z" FillRule="NonZero"/>
+					</Path.Data>
+				</Path>
+				<Canvas Name="g982" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path980" StrokeThickness="2" Stroke="Gray" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+						<Path.Data>
+							<PathGeometry Figures="M36 84H7C5.34315 84 4 82.675 4 81.0405V27.5C4 26.6716 3.32843 26 2.5 26H2V26C1.44772 26 1 25.5523 1 25V20C1 19.4477 1.44772 19 2 19V19H2.5C3.32843 19 4 18.3284 4 17.5V13.9595C4 12.325 5.34315 11 7 11H16" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+				<Canvas Name="g986" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path984" StrokeThickness="2" Stroke="Gray" StrokeStartLineCap="Round" StrokeEndLineCap="Round">
+						<Path.Data>
+							<PathGeometry Figures="M36 84C37.6569 84 39 82.675 39 81.0405V27.5C39 26.6716 39.6716 26 40.5 26H41V26C41.5523 26 42 25.5523 42 25V20C42 19.4477 41.5523 19 41 19V19H40.5C39.6716 19 39 18.3284 39 17.5V13.9595C39 12.325 37.6569 11 36 11H27" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+				<Canvas Name="g990" Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path988" Fill="#FF292929">
+						<Path.Data>
+							<PathGeometry Figures="M20 1C20 0.447715 20.4477 0 21 0C21.5523 0 22 0.447715 22 1V21.8534C22 22.2151 21.8047 22.5486 21.4893 22.7255C21.1854 22.896 20.8146 22.896 20.5107 22.7255C20.1953 22.5486 20 22.2151 20 21.8534L20 1Z" FillRule="NonZero"/>
+						</Path.Data>
+					</Path>
+				</Canvas>
+				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path992" Fill="#FF292929"  Effect="{StaticResource MaterialDesignShadowDepth1}">
+					<Path.Data>
+						<PathGeometry Figures="M14.6492 17.7569C13.185 16.7859 11.2112 17.1832 10.2367 18.6449C10.0796 18.8806 9.95462 19.1361 9.86506 19.4048L9.63246 20.1026C9.22192 21.3342 9.22192 22.6658 9.63246 23.8974L9.86502 24.5951C9.95461 24.8638 10.0796 25.1194 10.2368 25.3552C11.2113 26.817 13.1851 27.2146 14.6496 26.2439L17.6853 24.232C19.6945 22.9004 22.3055 22.9004 24.3147 24.232L27.3504 26.2439C28.8149 27.2146 30.7887 26.817 31.7632 25.3552C31.9204 25.1194 32.0454 24.8638 32.135 24.5951L32.3675 23.8974C32.7781 22.6658 32.7781 21.3342 32.3675 20.1026L32.1349 19.4048C32.0454 19.1361 31.9204 18.8806 31.7633 18.6449C30.7888 17.1832 28.815 16.7859 27.3508 17.7569L24.3162 19.7695C22.3063 21.1024 19.6937 21.1024 17.6838 19.7695L14.6492 17.7569Z" FillRule="NonZero"/>
+					</Path.Data>
+				</Path>
+				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path994" Fill="Gray" Stroke="Gray">
+					<Path.Data>
+						<PathGeometry Figures="M0.5 24.2397V21.2603L4.5 18.4603V27.0397L0.5 24.2397Z" FillRule="NonZero"/>
+					</Path.Data>
+				</Path>
+				<Path xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Name="path996" Fill="Gray" Stroke="Gray">
+					<Path.Data>
+						<PathGeometry Figures="M42.5 23.7397V20.7603L38.5 17.9603V26.5397L42.5 23.7397Z" FillRule="NonZero"/>
+					</Path.Data>
+				</Path>
+			</Canvas>
+		</Canvas>
+	</Viewbox>
 </UserControl>
