--- a/Prevu.Drawings/Machines/WaterPump.xaml
+++ b/Prevu.Drawings/Machines/WaterPump.xaml
@@ -8,13 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800" Width="100" Height="100">
   <Viewbox Stretch="Uniform">
     <Canvas Name="svg8" Width="100" Height="100">
-      <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="#FFBDBDBD" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
+      <Ellipse Canvas.Left="3" Canvas.Top="3" Width="94" Height="94" Name="circle2" Fill="Gray" Effect="{DynamicResource MaterialDesignShadowDepth1}"/>
       <Path Name="ColorSide" d:Fill="#FF607D8B">
         <Path.Data>
           <PathGeometry Figures="M27.9009 91.491C13.0836 83.5825 3 67.9688 3 50C3 32.0312 13.0836 16.4175 27.9009 8.50899V91.491Z" FillRule="NonZero"/>
         </Path.Data>
       </Path>
-      <Path Name="path6" StrokeThickness="6" Stroke="#FF616161" Effect="{DynamicResource MaterialDesignShadowDepth1}">
+			<Path Name="path6" StrokeThickness="6" Stroke="#FF292929" Effect="{DynamicResource MaterialDesignShadowDepth1}">
         <Path.Data>
           <PathGeometry Figures="M27 85.2116V14.7915C27 11.6869 30.3829 9.76576 33.0492 11.3562L92.0731 46.5649C94.6742 48.1165 94.6743 51.8837 92.0733 53.4353L33.0493 88.6467C30.383 90.2373 27 88.3162 27 85.2116Z" FillRule="NonZero"/>
         </Path.Data>
