--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -7,10 +7,10 @@
         x:Class="Test.MainWindow"
         mc:Ignorable="d" Background="{DynamicResource MaterialDesignPaper}"
         Title="MainWindow" Height="746" Width="1600">
-
+  
     <ScrollViewer>
         <StackPanel>
-            <Synoptics:CH/>
+            <Synoptics:ST/>
           
         </StackPanel>
     </ScrollViewer>
