--- a/Prevu.Drawings/Machines/External.xaml
+++ b/Prevu.Drawings/Machines/External.xaml
@@ -16,7 +16,7 @@
         <RectangleGeometry x:Key="clip0_105:5" Rect="0, 0, 100, 100"/>
       </Canvas.Resources>
       <Canvas Name="g6" >
-				<Path Name="path2" Fill="#FF292929" >
+				<Path Name="path2" Fill="Black" >
           <Path.Data>
             <PathGeometry Figures="M24 50L50 100V0L24 50Z" FillRule="NonZero"/>
           </Path.Data>
