--- a/Prevu.Synoptics.V2932_Infinya/GR.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/GR.xaml
@@ -6,6 +6,191 @@
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              x:Class="Prevu.Synoptics.GR" mc:Ignorable="d"
-             Height="840" Width="1420" d:Background="{DynamicResource MaterialDesignPaper}">
+             Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
+	<Grid>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="926,399,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="180"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1056,438,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="1160,545,0,0" VerticalAlignment="Top" Width="110" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1251,489,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="180"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="263,515,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Color="Oil">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="-90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="254,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="-90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="321,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="445,650,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.5,0.5" Color="Oil">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="597,457,0,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Color="Water">
+			<Labels:Pipe.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Labels:Pipe.RenderTransform>
+		</Labels:Pipe>
+		<Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="225,160,0,0" VerticalAlignment="Top" Width="200"/>
+		<Machines:GR_002 HorizontalAlignment="Left" Margin="625,227,0,0" VerticalAlignment="Top" Height="330" Width="330"/>
+		<Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="265,35,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="125" Width="125">
+			<Machines:MaterialInletOutlet.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:MaterialInletOutlet.RenderTransform>
+		</Machines:MaterialInletOutlet>
+		<Machines:CV_Valve HorizontalAlignment="Left" Margin="275,404,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.545,0.455" Height="95" Width="95">
+			<Machines:CV_Valve.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="90"/>
+					<TranslateTransform X="0" Y="4.95"/>
+				</TransformGroup>
+			</Machines:CV_Valve.RenderTransform>
+		</Machines:CV_Valve>
+		<Border BorderThickness="1" HorizontalAlignment="Left" Height="169" Margin="195,570,0,0" VerticalAlignment="Top" Width="266" Background="Gray" CornerRadius="15,15,15,15"/>
+		<Machines:EXC_HeatExchanger HorizontalAlignment="Left" Margin="546,618,0,0" VerticalAlignment="Top" Height="74" Width="74"/>
+		<Machines:NT_ConveyorBelt HorizontalAlignment="Left" Margin="1075,485,0,0" VerticalAlignment="Top" Width="200"/>
+		<Machines:MaterialInletOutlet HorizontalAlignment="Left" Margin="1325,433,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="124" Width="125">
+			<Machines:MaterialInletOutlet.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="0"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:MaterialInletOutlet.RenderTransform>
+		</Machines:MaterialInletOutlet>
+		<Machines:Waste HorizontalAlignment="Left" Margin="1165,562,0,0" VerticalAlignment="Top"/>
+		<Machines:Radar HorizontalAlignment="Left" Margin="873,173,0,0" VerticalAlignment="Top" Height="75" Width="75"/>
+		<Machines:CV_Valve_001 HorizontalAlignment="Left" Margin="505,412,0,0" VerticalAlignment="Top" Color="Water" RenderTransformOrigin="0.5,0.5">
+			<Machines:CV_Valve_001.RenderTransform>
+				<TransformGroup>
+					<ScaleTransform/>
+					<SkewTransform/>
+					<RotateTransform Angle="180"/>
+					<TranslateTransform/>
+				</TransformGroup>
+			</Machines:CV_Valve_001.RenderTransform>
+		</Machines:CV_Valve_001>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="785,293,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="280,186,0,0" VerticalAlignment="Top" Width="90" ComponentName="185-01-MA1"/>
+		<Rectangle HorizontalAlignment="Left" Height="110" Margin="512,97,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
+		<Machines:External HorizontalAlignment="Left" Height="70" Margin="475,59,0,0" VerticalAlignment="Top" Width="76"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="785,566,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-02-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="627,630,0,0" VerticalAlignment="Top" ComponentName="190-05-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="340,598,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,598,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="190,420,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="513,380,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="85,420,0,0" VerticalAlignment="Top" ComponentName="190-22-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="85,481,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="1170,430,0,0" VerticalAlignment="Top" ComponentName="192-01-MA1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="865,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1170,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
 
+	</Grid>
 </UserControl>
