Add components to pipes

--- a/Prevu.Synoptics.V2932_Infinya/GR.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/GR.xaml
@@ -5,10 +5,13 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
+						 xmlns:lex="http://wpflocalizeextension.codeplex.com"
+						 lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
+						 lex:ResxLocalizationProvider.DefaultDictionary="Resources"
              x:Class="Prevu.Synoptics.GR" mc:Ignorable="d"
              Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="185-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -18,7 +21,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="786,204,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -28,7 +31,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="410,164,0,0" VerticalAlignment="Top" Width="425" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="190-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -38,7 +41,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="926,399,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="926,399,0,0" VerticalAlignment="Top" Width="179" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -48,7 +51,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1056,438,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1056,438,0,0" VerticalAlignment="Top" Width="88" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -68,7 +71,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1251,489,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium">
+		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="1251,489,0,0" VerticalAlignment="Top" Width="118" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="192-01-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -78,7 +81,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="263,515,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Color="Oil">
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="263,515,0,0" VerticalAlignment="Top" Width="120" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -88,7 +91,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="254,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil">
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="254,359,0,0" VerticalAlignment="Top" Width="138" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -98,7 +101,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="321,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil">
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="321,292,0,0" VerticalAlignment="Top" Width="379" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-24-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -108,7 +111,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="445,650,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.5,0.5" Color="Oil">
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="445,650,0,0" VerticalAlignment="Top" Width="111" RenderTransformOrigin="0.5,0.5" Color="Oil" StatusComponent="190-05-MA1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -118,7 +121,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="597,457,0,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Color="Water">
+		<Labels:Pipe HorizontalAlignment="Left" Height="10" Margin="597,457,0,0" VerticalAlignment="Top" Width="128" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="190-21-CV1">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -184,13 +187,18 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="340,598,0,0" VerticalAlignment="Top" ComponentName="190-42-TT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,668,0,0" VerticalAlignment="Top" ComponentName="190-11-R1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="220,598,0,0" VerticalAlignment="Top" ComponentName="190-03-MA1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="190,420,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="202,420,0,0" VerticalAlignment="Top" ComponentName="190-24-CV1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="513,380,0,0" VerticalAlignment="Top" ComponentName="190-21-CV1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="85,420,0,0" VerticalAlignment="Top" ComponentName="190-22-CV1"/>
-		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="85,481,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="103,420,0,0" VerticalAlignment="Top" ComponentName="190-22-CV1"/>
+		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="103,481,0,0" VerticalAlignment="Top" ComponentName="190-22-CV2"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Margin="1170,430,0,0" VerticalAlignment="Top" ComponentName="192-01-MA1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="865,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-41-LT1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" Height="50" Margin="1170,118,0,0" VerticalAlignment="Top" Width="90" ComponentName="190-SHREDDER"/>
-
+		<Rectangle HorizontalAlignment="Left" Height="110" Margin="1067,331,0,0" Stroke="Black" VerticalAlignment="Top" Width="2" StrokeThickness="2"/>
+		<Machines:External HorizontalAlignment="Left" Height="70" Margin="1030,293,0,0" VerticalAlignment="Top" Width="76"/>
+		<TextBlock HorizontalAlignment="Left" Margin="10,498,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
+							 Text="{lex:Loc Low Speed}" TextAlignment="Right" FontSize="12"/>
+		<TextBlock HorizontalAlignment="Left" Margin="10,437,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88"
+							 Text="{lex:Loc High Speed}" TextAlignment="Right" FontSize="12"/>
 	</Grid>
 </UserControl>
