--- a/Prevu.Synoptics.V2451_Biffa/WH1.xaml
+++ b/Prevu.Synoptics.V2451_Biffa/WH1.xaml
@@ -18,7 +18,7 @@
 				</TransformGroup>
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="334,323,0,0" VerticalAlignment="Top" Width="40" StatusComponent="420-22-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="331,321,0,0" VerticalAlignment="Top" Width="46" StatusComponent="420-22-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -221,7 +221,7 @@
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
 		<Machines:Waste HorizontalAlignment="Left" Margin="958,532,0,0" VerticalAlignment="Top" Height="46" Width="44"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="328,373,0,0" VerticalAlignment="Top" Width="52" StatusComponent="420-22-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="327,372,0,0" VerticalAlignment="Top" Width="54" StatusComponent="420-22-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -232,7 +232,7 @@
 			</Labels:Pipe.RenderTransform>
 		</Labels:Pipe>
 		<Rectangle HorizontalAlignment="Left" Height="8" Margin="332,343,0,0" Stroke="Black" VerticalAlignment="Top" Width="42" Fill="#FFBDBDBD"/>
-		<Labels:Pipe HorizontalAlignment="Left" Margin="344,410,0,0" VerticalAlignment="Top" Width="18" StatusComponent="420-23-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
+		<Labels:Pipe HorizontalAlignment="Left" Margin="344,409,0,0" VerticalAlignment="Top" Width="20" StatusComponent="420-23-CV1" RenderTransformOrigin="0.5,0.5" Color="ByProduct">
 			<Labels:Pipe.RenderTransform>
 				<TransformGroup>
 					<ScaleTransform/>
@@ -333,7 +333,7 @@
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="1275,697,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="450-71-PC1"/>
+            ComponentName="450-71-ECS1"/>
 		<Labels:DeviceLabel HorizontalAlignment="Left" 
             Margin="398,347,0,0" 
             VerticalAlignment="Top" 
