Change name from GR to SH

--- a/Test/MainWindow.xaml
+++ b/Test/MainWindow.xaml
@@ -10,7 +10,7 @@
 
     <ScrollViewer>
         <StackPanel>
-            <Synoptics:GR/>
+            <Synoptics:SH/>
           
         </StackPanel>
     </ScrollViewer>
