--- a/Prevu.Synoptics.V2932_Infinya/SH.xaml
+++ b/Prevu.Synoptics.V2932_Infinya/SH.xaml
@@ -1,4 +1,5 @@
-﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl x:Class="Prevu.Synoptics.SH" 
+						 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
@@ -8,7 +9,7 @@
 						 xmlns:lex="http://wpflocalizeextension.codeplex.com"
 						 lex:ResxLocalizationProvider.DefaultAssembly="Prevu.Localization"
 						 lex:ResxLocalizationProvider.DefaultDictionary="Resources"
-             x:Class="Prevu.Synoptics.GR" mc:Ignorable="d"
+						 mc:Ignorable="d"
              Height="840" Width="1520" d:Background="{DynamicResource MaterialDesignPaper}">
 	<Grid>
 		<Labels:Pipe HorizontalAlignment="Left" Height="12" Margin="295,136,0,0" VerticalAlignment="Top" Width="66" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" StatusComponent="185-01-MA1">
